web-infras/parser/tests/fixtures/babel/core/uncategorised/544/output.txt
[SyntaxError]: Unexpected reserved word. (2,9)
2|const { public } = foo();
 |       ^
